--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <title>Maria Bunkowska</title>
+    <link href="css/styles.css" rel>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/scripts.js"> </script>
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   </head>
   <body>
     <link rel="stylesheet" href="CSS/styles.css"/>
     <div class="header">
       <h1>Maria Bunkowska</h1>
-      <p>Ambitious and goal-oriented graduate of MSc Project Management from the University of Sussex seeking development opportunities within a technology sector. Fluent in English and Polish with additional knowledge of French. Highly valued for exceptional attention to details, high learning ability, and excellent project management. Able to work as part of a team and performing well under pressure.</p>
-      <p>Privately an amateur plant-based chef, physical activity enthusiast and avid listener of business and technology podcasts. Currently learning front-end web technologies (HTML, CSS, Bootstrap, JavaScript and jQuery) with Code First: Girls.</p>
+    </div>
+    <div class="About">
+      <h2>About me</h2>
+      <p>Open minded and hungry for knowledge graduate of MSc Project Management from the University of Sussex seeking development opportunities within the information technology sector. Highly valued for clear and concise communication, strong competence in building networks with diverse people and ability to adapt to new, challenging situations. Capable of quickly analysing information in a wide range of formats, deriving insights from data and drawing conclusions to solve problems and make recommendations. Fluent in English and Polish with additional knowledge of French.</p>
+      <p>Privately an amateur plant-based chef, physical activity enthusiast and avid listener of business and technology podcasts. Fascinated by space exploration, developments in artificial intelligence and secular Buddhism. Currently learning front-end web technologies (HTML, CSS, Bootstrap, JavaScript and jQuery) with Code First: Girls.</p>
     </div>
     <div class="navbar">
       <a href="Experience">Experience</a>
